apply tests to  cities
